--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "test": "ts-mocha tests/**/*.test.ts --timeout 10000 --exit",
     "coverage": "nyc --reporter=lcov npm run test",
+	"prepare": "npm run build",
     "build": "./build.sh"
   },
   "repository": {
